--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,101 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.content {
+  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+  padding-block: 60px;
+  height: calc(100vh - 80px);
 }
 
-.footer {
+.content h1 {
+  font-size: 120px;
+  color: #FFF;
+}
+
+.buttons {
   display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+  gap: 12px;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
+.content a {
+  position: relative;
+  padding-block: 12px;
+  padding-inline: 24px;
+  background-color: #829CBC;
+  color: #FFF;
   text-decoration: none;
+  border-radius: 8px;
+  font-size: 18px;
+  transition: 200ms;
+  isolation: isolate;
+  overflow: hidden;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.content a::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  width: 0%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #1D3461;
+  transition: 300ms;
 }
 
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+.content a:hover::before {
+  width: 100%;
 }
 
-.title,
-.description {
+.advice {
+  position: absolute;
+  bottom: 60px;
+  right: 0;
+  width: 300px;
+  min-height: 300px;
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #829CBC;
+  color: #FFF;
+  padding: 24px;
+  display: grid;
+  place-items: center;
+  font-size: 18px;
   text-align: center;
+  font-weight: 400;
+  isolation: isolate;
+  cursor: pointer;
 }
 
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
+.content button {
+  position: relative;
+  background-color: transparent;
+  color: #FFF;
+  border: none;
+  cursor: pointer;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.content button:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 1px;
+  background-color: #FFF;
+  transition: 200ms;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.content button:hover::before {
+  width: 100%;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
-  }
-  .code {
-    background: #111;
-  }
-  .logo img {
-    filter: invert(1);
-  }
+.advice img {
+  position: absolute;
+  width: 150px;
+  aspect-ratio: 1 / 1 ;
+  right: -32px;
+  bottom: -32px;
+  z-index: -1;
 }
