--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,174 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;300;400&family=DotGothic16&family=Inter+Tight:wght@100;300;400&display=swap');
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+/* Box sizing rules */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: 300;
+  background-color: #131b23;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
   }
-  body {
-    color: white;
-    background: black;
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+
+/* Global Styles */
+
+.container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.wrapper {
+  padding-top: 64px;
+}
+
+/* Navbar */
+
+nav {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background-color: #131b23;
+  height: 80px;
+  border-bottom: 1px solid #1d3461;
+  overflow: hidden;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-container h1 {
+  color: #FFF;
+}
+
+.navbar-links {
+  display: flex;
+  gap: 12px;
+}
+
+.navbar-links a {
+  position: relative;
+  color: #FFF;
+  text-decoration: none;
+}
+
+.navbar-links a:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 0%;
+  height: 1px;
+  background-color: #FFF;
+  transition: 200ms;
+}
+
+.navbar-links a:hover::before {
+  width: 100%;
+}
+
+.gamePlayer {
+  height: 100%;
+}
+
+.gamePlayer object {
+  height: 500px;
+}
+
+footer {
+  width: 100%;
+  height: 80px;
+}
+
+nav img {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 70px;
+  animation: run 10s infinite;
+}
+
+.jump {
+  transform: translateY(10px);
+}
+
+@keyframes run {
+  0% {
+    translate: 0;
+  }
+
+  100% {
+    translate: 105vw;
   }
 }
