--- a/styles/Leaderboards.module.css
+++ b/styles/Leaderboards.module.css
@@ -125,14 +125,42 @@
 
 .winners {
     margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
 }
 
 .winner {
-    display: flex;
+    display: grid;
+    grid-template-columns: 80px 1fr 1fr;
     align-items: center;
     gap: 24px;
 }
 
 .winner img {
-    width: 7%;
+    width: 100%;
+}
+
+.winner div {
+    background-color: #829CBC;
+    width: 80px;
+    height: 80px;
+    padding: 12px;
+    border-radius: 4px;
+}
+
+.winner span {
+    border-right: 4px solid #829CBC;
+    padding-right: 12px;
+    padding-block: 4px;
+}
+
+.winner span > p {
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
+.winner span > h3 {
+    font-size: 24px;
+    text-transform: uppercase;
 }
